# E2FGVI

./: .gitignore  pyproject.toml  setup.py  test.py
e2fgvi/: __init__.py  __main__.py  cli.py  evaluate.py  inpaint.py  test.py  train.py
e2fgvi/core/: __init__.py  dataset.py  metrics.py  trainer.py
e2fgvi/datasets/: __init__.py
e2fgvi/model/: __init__.py
e2fgvi/model/modules/: __init__.py
